@@ -201,6 +201,10 @@
                         <i class="icon-lock"></i>
                       </button>
                   </div>
+                  <!-- queuefail area -->
+                  <div id="queuefail" class="span12">
+                    
+                  </div>
                   <!-- video queue -->
                   <ul class="span12 videolist" id="queue">
                   </ul>
