@@ -1,3 +1,8 @@
+Wed Oct 16 23:29 2013 CDT
+    * www/assets/js/callbacks.js, www/channel.html,
+      www/assets/css/ytsync.css: Make queuefail errors always show in
+      a consistently visible location.
+
 Wed Oct 16 23:21 2013 CDT
     * www/assets/js/util.js: Add an errDialog function that shows an
       error message over the chatbox (instead of alert())
